<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:rowCount="8">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnOrt"
            android:id="@+id/btnOrt"
            android:layout_row="0"
            android:layout_column="0" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnStrasse"
            android:id="@+id/btnStrasse"
            android:layout_row="1"
            android:layout_column="0" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnAdresse"
            android:id="@+id/btnAdresse"
            android:layout_row="2"
            android:layout_column="0" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnHaushalt"
            android:id="@+id/btnHaushalt"
            android:layout_row="3"
            android:layout_column="0" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnMitglied"
            android:id="@+id/btnMitglied"
            android:layout_row="4"
            android:layout_column="0" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnWasserzaehler"
            android:id="@+id/btnWasserzaehler"
            android:layout_row="5"
            android:layout_column="0" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnWasserstandsmeldung"
            android:id="@+id/btnWasserstandsmeldung"
            android:layout_row="6"
            android:layout_column="0" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight=".3"
            android:text="@string/btnVerwaltungspersonal"
            android:id="@+id/btnVerwaltungspersonal"
            android:layout_row="7"
            android:layout_column="0" />


    </GridLayout>
</RelativeLayout>
