<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gemeinde.gemeindeverwaltung.gemeindeverwaltung.ActivityMitglied">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        android:id="@+id/btnAdd"
        android:layout_toLeftOf="@+id/btnUpdate"
        android:layout_toStartOf="@+id/btnUpdate" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate"
        android:id="@+id/btnUpdate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete"
        android:id="@+id/btnDelete"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnUpdate"
        android:layout_toEndOf="@+id/btnUpdate" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnDelete"
        android:scrollbars="horizontal|vertical"
        android:scrollbarStyle="outsideInset"
        android:fillViewport="true">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal|vertical"
            android:background="@drawable/cell_data"
            android:id="@+id/scrollView" >
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:id="@+id/tableMitglied">
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>
